# universal-api-client

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md
docs/plans/: design.md  implementation.md
src/: lib.rs
