[package]
name = "universal-api-client"
version = "0.1.0"
edition = "2021"
authors = ["xixiangwu"]
description = "Lightweight Rust library for unified API access to Anthropic and OpenAI-compatible services"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"
thiserror = "1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
